@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-26T12:15:33Z",
+  "timestamp" : "2025-02-27T00:39:56Z",
   "count_outdated" : 8541,
   "uniques_outdated" : 3943,
-  "count" : 8581,
-  "uniques" : 3972,
+  "count" : 8582,
+  "uniques" : 3973,
   "clones" : [
     {
       "timestamp": "2025-02-13T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2025-02-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
