@@ -1,5 +1,5 @@
 {
-  "count": 40,
+  "count": 41,
   "uniques": 16,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2025-02-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
