@@ -1,3 +1,12 @@
+2025-02-27T00:39:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13556287092 # 845
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-27
+* notice: last 14d: unq all: 16 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 3943 8541 / 3972 8581
+* notice: next accum: outdated-unq outdated-all / unq all: 3943 8541 / 3973 8582
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-02-26]
+
 2025-02-26T12:15:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13543635194 # 844
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-26
